# rust-macro-test

./: .gitignore  Cargo.toml
macro-test-traits/: Cargo.toml
macro-test-traits/src/: lib.rs
macro_test_run/: Cargo.toml  build.rs  test.json
macro_test_run/src/: main.rs
src/: lib.rs
