[package]
name = "macro_test_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_test = { path = "../" }
macro-test-traits = {path = "../macro-test-traits"}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
